[package]
authors = ["Jeremy Rubin <j@rubin.io>", "Steven Roose <steven@stevenroose.org>"]
edition = "2018"
name = "integration_test_async"
publish = false
version = "0.1.0"

[dependencies]
bitcoin = {git = "https://github.com/boolnetwork/rust-dogecoin", rev = "c976a25"}
bitcoincore-rpc-async = {package = "bitcoincore-rpc-async2", path = "../client"}
lazy_static = "1.4.0"
log = "0.4"
tokio = {version = "1", features = ["full"]}
